--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
   "name": "rapidpagebuilder",
   "version": "0.0.0",
-  "description": "Rapid Page Builder",
-  "author": "Tim Hunold <codeposse@gmail.com>",
+  "keywords": [
+    "mars rover",
+    "NASA",
+    "angular",
+    "ng8"
+  ],
+  "maintainers": [
+    {
+      "name": "Tim Hunold",
+      "email": "codeposse+github@gmail.com",
+      "web": "http://www.ItsSoBig.com"
+    }
+  ],
   "repository": "https://github.com/CodePosse/RapidPageBuilder.git",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-notify": "^0.4.1",
     "gulp": "*",
     "gulp-add-src": "^0.2.0",
+    "gulp-cheerio": "^0.6.2",
     "gulp-clean": "^0.3.1",
     "gulp-concat": "*",
     "gulp-csso": "^1.0.0",
