--- a/package.json
+++ b/package.json
@@ -1,54 +1,53 @@
 {
-  "name": "rapidpagebuilder",
-  "version": "0.0.0",
-  "keywords": [
-    "mars rover",
-    "NASA",
-    "angular",
-    "ng8"
-  ],
-  "maintainers": [
-    {
-      "name": "Tim Hunold",
-      "email": "codeposse+github@gmail.com",
-      "web": "http://www.ItsSoBig.com"
+    "name": "rapidpagebuilder",
+    "version": "0.0.0",
+    "keywords": [
+        "mars rover",
+        "NASA",
+        "angular",
+        "ng8"
+    ],
+    "maintainers": [{
+        "name": "Tim Hunold",
+        "email": "codeposse+github@gmail.com",
+        "web": "http://www.ItsSoBig.com"
+    }],
+    "repository": "https://github.com/CodePosse/RapidPageBuilder.git",
+    "devDependencies": {
+        "grunt": "^1.4.1",
+        "grunt-notify": "^0.4.1",
+        "gulp": "^4.0.2",
+        "gulp-add-src": "^1.0.0",
+        "gulp-cheerio": "^1.0.0",
+        "gulp-clean": "^0.4.0",
+        "gulp-concat": "*",
+        "gulp-csso": "^4.0.1",
+        "gulp-filter": "^7.0.0",
+        "gulp-html-minifier": "^0.1.6",
+        "gulp-htmlclean": "^2.7.22",
+        "gulp-htmlmin": "^5.0.1",
+        "gulp-if": "^3.0.0",
+        "gulp-inject": "^5.0.5",
+        "gulp-plumber": "^1.2.1",
+        "gulp-rev": "^9.0.0",
+        "gulp-rev-replace": "^0.4.4",
+        "gulp-uglify": "^3.0.2",
+        "gulp-uglifycss": "^1.1.0",
+        "gulp-uncss": "^1.0.6",
+        "livereload": "^0.9.3"
+    },
+    "dependencies": {
+        "clean-css": "^5.2.4",
+        "cryptiles": "^4.1.3",
+        "gulp-concat": "^2.5.2",
+        "gulp-uglifyjs": "^0.6.1",
+        "hoek": "^6.1.3",
+        "js-yaml": "^4.1.0",
+        "lodash": "^4.17.15",
+        "lodash.template": "^4.5.0",
+        "minimatch": "^3.0.4",
+        "stringstream": "^1.0.0",
+        "underscore": "^1.13.2",
+        "underscore.string": "^3.3.6"
     }
-  ],
-  "repository": "https://github.com/CodePosse/RapidPageBuilder.git",
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-notify": "^0.4.1",
-    "gulp": "^4.0.2",
-    "gulp-add-src": "^0.2.0",
-    "gulp-cheerio": "^0.6.3",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "*",
-    "gulp-csso": "^1.0.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-html-minifier": "^0.1.6",
-    "gulp-htmlclean": "^2.7.22",
-    "gulp-htmlmin": "^1.1.1",
-    "gulp-if": "^1.2.5",
-    "gulp-inject": "^1.2.0",
-    "gulp-plumber": "^1.2.1",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.4.4",
-    "gulp-uglify": "^1.1.0",
-    "gulp-uglifycss": "^1.1.0",
-    "gulp-uncss": "^1.0.1",
-    "livereload": "^0.9.1"
-  },
-  "dependencies": {
-    "clean-css": "^4.2.3",
-    "cryptiles": "^4.1.3",
-    "gulp-concat": "^2.5.2",
-    "gulp-uglifyjs": "^0.6.1",
-    "hoek": "^6.1.3",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15",
-    "lodash.template": "^4.5.0",
-    "minimatch": "^3.0.4",
-    "stringstream": "^1.0.0",
-    "underscore.string": "^3.3.5"
-  }
 }
