--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
         "angular",
         "ng8"
     ],
-    "maintainers": [{
-        "name": "Tim Hunold",
-        "email": "codeposse+github@gmail.com",
-        "web": "http://www.ItsSoBig.com"
-    }],
+    "maintainers": [
+        {
+            "name": "Tim Hunold",
+            "email": "codeposse+github@gmail.com",
+            "web": "http://www.ItsSoBig.com"
+        }
+    ],
     "repository": "https://github.com/CodePosse/RapidPageBuilder.git",
     "devDependencies": {
         "grunt": "^1.4.1",
@@ -22,18 +24,18 @@
         "gulp-clean": "^0.4.0",
         "gulp-concat": "*",
         "gulp-csso": "^4.0.1",
-        "gulp-filter": "^7.0.0",
+        "gulp-filter": "^6.0.0",
         "gulp-html-minifier": "^0.1.6",
         "gulp-htmlclean": "^2.7.22",
         "gulp-htmlmin": "^5.0.1",
         "gulp-if": "^3.0.0",
-        "gulp-inject": "^5.0.5",
+        "gulp-inject": "^5.0.3",
         "gulp-plumber": "^1.2.1",
         "gulp-rev": "^9.0.0",
         "gulp-rev-replace": "^0.4.4",
         "gulp-uglify": "^3.0.2",
         "gulp-uglifycss": "^1.1.0",
-        "gulp-uncss": "^1.0.6",
+        "gulp-uncss": "^0.1.7",
         "livereload": "^0.9.3"
     },
     "dependencies": {
@@ -45,7 +47,7 @@
         "js-yaml": "^4.1.0",
         "lodash": "^4.17.15",
         "lodash.template": "^4.5.0",
-        "minimatch": "^3.0.4",
+        "minimatch": "^4.1.1",
         "stringstream": "^1.0.0",
         "underscore": "^1.13.2",
         "underscore.string": "^3.3.6"
